@@ -47,16 +47,20 @@ class BarGraphItem(GraphicsObject):
             pens=None,
             brushes=None,
         )
+        self._shape = None
+        self.picture = None
         self.setOpts(**opts)
         
     def setOpts(self, **opts):
         self.opts.update(opts)
         self.picture = None
+        self._shape = None
         self.update()
         self.informViewBoundsChanged()
         
     def drawPicture(self):
         self.picture = QtGui.QPicture()
+        self._shape = QtGui.QPainterPath()
         p = QtGui.QPainter(self.picture)
         
         pen = self.opts['pen']
@@ -122,6 +126,10 @@ class BarGraphItem(GraphicsObject):
             if brushes is not None:
                 p.setBrush(fn.mkBrush(brushes[i]))
                 
+            if np.isscalar(x0):
+                x = x0
+            else:
+                x = x0[i]
             if np.isscalar(y0):
                 y = y0
             else:
@@ -130,9 +138,15 @@ class BarGraphItem(GraphicsObject):
                 w = width
             else:
                 w = width[i]
-            
-            p.drawRect(QtCore.QRectF(x0[i], y, w, height[i]))
-            
+            if np.isscalar(height):
+                h = height
+            else:
+                h = height[i]
+                
+                
+            rect = QtCore.QRectF(x, y, w, h)
+            p.drawRect(rect)
+            self._shape.addRect(rect)
             
         p.end()
         self.prepareGeometryChange()
@@ -148,4 +162,7 @@ class BarGraphItem(GraphicsObject):
             self.drawPicture()
         return QtCore.QRectF(self.picture.boundingRect())
     
-        
+    def shape(self):
+        if self.picture is None:
+            self.drawPicture()
+        return self._shape
