@@ -31,6 +31,7 @@ pyqtgraph-0.9.9  [unreleased]
     - Added FillBetweenItem.setCurves()
     - MultiPlotWidget now has setMinimumPlotHeight method and displays scroll bar
       when plots do not fit inside the widget.
+    - Added BarGraphItem.shape() to allow better mouse interaction
 
   Bugfixes:
     - PlotCurveItem now has correct clicking behavior--clicks within a few px
